Use https git clone as no ssh.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ stages:
   - export GOPATH="$CI_PROJECT_DIR/.cache"
   - export GOCACHE="$CI_PROJECT_DIR/.cache/build"
   - export GO_LDFLAGS="-linkmode external -extldflags -static -X main.Tag=$CI_COMMIT_TAG -X main.Commit=$CI_COMMIT_SHA -X 'main.BuildTime=`date '+%b %_d %Y, %H:%M:%S'`'"
-  - git clone git@github.com:karmanyaahm/groupme.git ../groupme
-  - git clone git@github.com:karmanyaahm/mautrix-go.git ../mautrix
+  - git clone https://github.com/karmanyaahm/groupme.git ../groupme
+  - git clone https://github.com/karmanyaahm/mautrix-go.git ../mautrix
   script:
   - go build -ldflags "$GO_LDFLAGS" -o mautrix-whatsapp
   artifacts:
