--- a/helm/mautrix-whatsapp/templates/serviceaccount.yaml
+++ b/helm/mautrix-whatsapp/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "mautrix-whatsapp.serviceAccountName" . }}
+  name: {{ template "mautrix-groupme.serviceAccountName" . }}
   labels:
-{{ include "mautrix-whatsapp.labels" . | indent 4 }}
+{{ include "mautrix-groupme.labels" . | indent 4 }}
 {{- end -}}
