--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -10,9 +10,9 @@ ENV UID=1337 \
 
 RUN apk add --no-cache ffmpeg su-exec ca-certificates bash jq curl yq@edge
 
-ARG EXECUTABLE=./mautrix-whatsapp
-COPY $EXECUTABLE /usr/bin/mautrix-whatsapp
-COPY ./example-config.yaml /opt/mautrix-whatsapp/example-config.yaml
+ARG EXECUTABLE=./mautrix-groupme
+COPY $EXECUTABLE /usr/bin/mautrix-groupme
+COPY ./example-config.yaml /opt/mautrix-groupme/example-config.yaml
 COPY ./docker-run.sh /docker-run.sh
 VOLUME /data
 
