--- a/helm/mautrix-whatsapp/templates/configmap.yaml
+++ b/helm/mautrix-whatsapp/templates/configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "mautrix-whatsapp.fullname" . }}
+  name: {{ template "mautrix-groupme.fullname" . }}
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app.kubernetes.io/name: {{ template "mautrix-whatsapp.name" . }}
+    app.kubernetes.io/name: {{ template "mautrix-groupme.name" . }}
 data:
   config.yaml: |
     homeserver:
@@ -14,7 +14,7 @@ data:
       domain: {{ .Values.homeserver.domain }}
 
     appservice:
-      address: http://{{ include "mautrix-whatsapp.fullname" . }}:{{ .Values.service.port }}
+      address: http://{{ include "mautrix-groupme.fullname" . }}:{{ .Values.service.port }}
 
       hostname: 0.0.0.0
       port: {{ .Values.service.port }}
