--- a/helm/mautrix-whatsapp/templates/service.yaml
+++ b/helm/mautrix-whatsapp/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mautrix-whatsapp.fullname" . }}
+  name: {{ include "mautrix-groupme.fullname" . }}
   labels:
-{{ include "mautrix-whatsapp.labels" . | indent 4 }}
+{{ include "mautrix-groupme.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "mautrix-whatsapp.name" . }}
+    app.kubernetes.io/name: {{ include "mautrix-groupme.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
