--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,18 +1,13 @@
-FROM alpine:3.12
-
-RUN echo $'\
-@edge http://dl-cdn.alpinelinux.org/alpine/edge/main\n\
-@edge http://dl-cdn.alpinelinux.org/alpine/edge/testing\n\
-@edge http://dl-cdn.alpinelinux.org/alpine/edge/community' >> /etc/apk/repositories
+FROM alpine:3.14
 
 ENV UID=1337 \
     GID=1337
 
-RUN apk add --no-cache ffmpeg su-exec ca-certificates bash jq curl yq@edge
+RUN apk add --no-cache ffmpeg su-exec ca-certificates bash jq curl yq
 
-ARG EXECUTABLE=./mautrix-groupme
-COPY $EXECUTABLE /usr/bin/mautrix-groupme
-COPY ./example-config.yaml /opt/mautrix-groupme/example-config.yaml
+ARG EXECUTABLE=./go-groupme
+COPY $EXECUTABLE /usr/bin/go-groupme
+COPY ./example-config.yaml /opt/go-groupme/example-config.yaml
 COPY ./docker-run.sh /docker-run.sh
 VOLUME /data
 
