editorconfig: update to Beeper standards
Signed-off-by: Sumner Evans <sumner@beeper.com>

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,11 @@ insert_final_newline = true
 
 [*.{yaml,yml}]
 indent_style = space
+indent_size = 2
+
+[*.sql]
+indent_style = space
+indent_size = 4
 
 [.gitlab-ci.yml]
 indent_size = 2
