--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - id: go-imports-repo
         args:
           - "-local"
-          - "github.com/beeper/hungryserv"
+          - "github.com/beeper/groupme"
           - "-w"
       - id: go-vet-repo-mod
       # - id: go-staticcheck-repo-mod
